--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon vite",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -22,13 +22,17 @@
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "antd": "^5.18.3",
     "axios": "^1.7.2",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
     "pdfjs-dist": "^3.11.174",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.4.1",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.1",
     "react-snowfall": "^2.1.0",
     "react-type-animation": "^3.2.0",
+    "react-world-flags": "^1.6.0",
     "use-media-antd-query": "^1.1.0"
   },
   "devDependencies": {
