--- a/front/package.json
+++ b/front/package.json
@@ -28,8 +28,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^15.4.1",
+    "react-multi-carousel": "^2.8.6",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.5.1",
+    "react-slick": "^0.30.3",
     "react-snowfall": "^2.1.0",
     "react-type-animation": "^3.2.0",
     "react-world-flags": "^1.6.0",
